--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "autoprefixer": "^10.0.2",
     "next": "^10.0.3",
     "next-auth": "^3.1.0",
+    "pg": "^8.5.1",
     "postcss": "^8.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loader-spinner": "^3.1.14",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
