--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^0.2.0",
     "autoprefixer": "^10.0.2",
+    "graphql-request": "^3.3.0",
     "next": "^10.0.3",
     "next-auth": "^3.1.0",
     "pg": "^8.5.1",
     "postcss": "^8.1.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.11.5",
     "react-loader-spinner": "^3.1.14",
+    "swr": "^0.3.9",
     "tailwindcss": "^2.0.1"
   },
   "devDependencies": {
