--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@headlessui/react": "^0.2.0",
     "autoprefixer": "^10.0.2",
+    "graphql": "^15.4.0",
     "graphql-request": "^3.3.0",
     "next": "^10.0.3",
     "next-auth": "^3.1.0",
