--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "^10.0.2",
     "graphql": "^15.4.0",
     "graphql-request": "^3.3.0",
+    "lodash.debounce": "^4.0.8",
     "next": "^10.0.3",
     "next-auth": "^3.1.0",
     "pg": "^8.5.1",
