--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash.debounce": "^4.0.8",
     "next": "^10.0.3",
     "next-auth": "^3.1.0",
+    "next-pwa": "^3.1.5",
     "pg": "^8.5.1",
     "postcss": "^8.1.10",
     "react": "^17.0.1",
