--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.11.5",
     "react-loader-spinner": "^3.1.14",
+    "react-pwa-to-homescreen": "^1.1.0",
     "swr": "^0.3.9",
     "tailwindcss": "^2.0.1"
   },
